# email_writer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  request.md
outlook_addin/: EmailWriter.bas  INSTALL.md
scripts/: manage_store.py  prepare_emails.py  start_server.py
src/email_writer/: config.py  server.py
src/email_writer/converter/: msg_to_markdown.py
src/email_writer/core/: generator.py  prompt_builder.py
src/email_writer/gemini/: client.py  file_search.py
src/email_writer/models/: email_metadata.py  request.py  response.py
tests/: conftest.py  test_generator.py  test_models.py  test_prompt_builder.py  test_server.py
